fix: spacing in dashboard view adjusted

--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -3,7 +3,7 @@
     font-size: 48px;
     font-weight: 400;
     color:rgba(40, 40, 45, 1);
-    margin-bottom:36px;
+    margin-bottom:24px;
 }
 .dashboard-info-content{
     background-color: rgba(247, 247, 250, 1);
