--- a/src/app/pages/seller-dashboard/seller-dashboard.component.css
+++ b/src/app/pages/seller-dashboard/seller-dashboard.component.css
@@ -1,5 +1,5 @@
 .dashboard{
-    min-height:100%;
+    height:100%;
     background-color: white;
 }
 .store-toolbar{
@@ -58,7 +58,7 @@ aside{
     border-radius: 8px;
 }
 .dashboard-info{
-    margin:54px  auto;
+    margin:30px  auto 0;
     width:100%;
     padding:0 75px;
 }
